<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorTransparen2t">
<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/detailImage"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/backImage"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_xx"
            android:layout_marginStart="@dimen/margin_xx"
            android:layout_marginLeft="@dimen/margin_xxx" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_xxx"
        android:layout_marginLeft="@dimen/margin_xxx">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxx"
        android:textSize="@dimen/sp_13"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:text="@string/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxx"
            android:textSize="@dimen/sp_15"
            android:id="@+id/Name"
            android:textColor="@color/white"

            android:text="@string/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:textSize="@dimen/sp_13"
            android:textAllCaps="true"
            android:id="@+id/tvDesc"
            android:textColor="@color/red"
            android:text="@string/Description"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxx"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/white"
            android:id="@+id/desc"
            android:layout_marginEnd="@dimen/button_height_40"
            android:text="@string/Description"
            android:layout_marginRight="@dimen/margin_xxxx" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:textSize="@dimen/sp_13"
            android:textAllCaps="true"
            android:id="@+id/tvComics"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/red"
            android:text="@string/comics"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxx"
            tools:listitem="@layout/item_detail"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:textSize="@dimen/sp_13"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:id="@+id/tvseries"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/series"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewSeries"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="@dimen/margin_xxx"
            tools:listitem="@layout/item_detail"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:textSize="@dimen/sp_13"
            android:textAllCaps="true"
            android:id="@+id/tvstories"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/red"
            android:text="@string/stories"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewStories"
            android:layout_marginTop="@dimen/margin_xxx"
            tools:listitem="@layout/item_detail"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:textSize="@dimen/sp_13"
            android:textAllCaps="true"
            android:id="@+id/tvEvents"

            android:textColor="@color/red"
            android:text="@string/events"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewEvents"
            android:layout_marginTop="@dimen/margin_xxx"
            tools:listitem="@layout/item_detail"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:textSize="@dimen/sp_13"
            android:textAllCaps="true"

            android:textColor="@color/red"
            android:text="@string/related"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/margin_xxxx"
             android:id="@+id/detailLinkLin"
             android:background="?android:attr/selectableItemBackground"

         android:orientation="horizontal">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_15"
                 android:textColor="@color/white"
                 android:layout_weight="1"
                 android:text="@string/detail"/>
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_xx"
                 android:src="@drawable/ic_arrow_white_24dp"
                 android:layout_marginRight="@dimen/margin_xx" />
         </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:id="@+id/wikiLinkLin"
            android:background="?android:attr/selectableItemBackground"

            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:id="@+id/wiki"

                android:text="@string/wiki"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_xx"
                android:src="@drawable/ic_arrow_white_24dp"
                android:layout_marginRight="@dimen/margin_xx" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_xxxx"
            android:id="@+id/comicLinkLin"
            android:foreground="?selectableItemBackground"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:id="@+id/comicLink"
                android:text="@string/comikLink"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_xx"
                android:src="@drawable/ic_arrow_white_24dp"
                android:layout_marginRight="@dimen/margin_xx" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>